@@ -1,3 +1,5 @@
+2011-Apr-04	weaver			Added postmarks to mq_send calls from XtcMonitorServer to allow
+					recovery of shared memory buffers lost to non-responsive clients.
 2010-Dec-17	weaver	Tag V02-10-02	Added new acqiris/Tdc data types.
 2010-Dec-09	tomy		Modified xtc/Detinfo.hh and xtc/src/DetInfo.cc to add CXI detector IDs.
 2010-Nov-30	weaver	Tag V02-10-00.  Added evr/ConfigV5 and evr/SequencerConfigV1.
